envoy/envoy.yml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_nginx
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: nginx_server
                route_config:
                  name: default_route
                  virtual_hosts:
                    - name: default_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: nginx_server_cluster
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream,reset"
                              num_retries: 7
                              per_try_timeout: 2s
                              retry_back_off:
                                base_interval: 0.25s
                                max_interval: 10s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: nginx_server_cluster
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 300
            max_pending_requests: 150
            max_requests: 300
            max_retries: 3
            track_remaining: true
      outlier_detection:
        consecutive_5xx: 5
        interval: 10s
        base_ejection_time: 30s
        max_ejection_time: 300s
      load_assignment:
        cluster_name: nginx_server_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-downstream
                      port_value: 80
